--- a/Desktop/Spring_pvz/FirstSpringProject/pom.xml
+++ b/Desktop/Spring_pvz/FirstSpringProject/pom.xml
@@ -33,7 +33,24 @@
 <artifactId>spring-context</artifactId>
 <version>5.3.1</version>
 </dependency>
-  	
+
+<dependency>
+	<groupId>javax.annotation</groupId>
+	<artifactId>javax.annotation-api</artifactId>
+	<version>1.3.2</version>
+</dependency>
+  	<dependency>
+<groupId>org.springframework</groupId>
+<artifactId>spring-test</artifactId>
+<version>5.3.1</version>
+<scope>test</scope>
+</dependency>
+  	<dependency>
+<groupId>junit</groupId>
+<artifactId>junit</artifactId>
+<version>4.12</version>
+<scope>test</scope>
+</dependency>
   </dependencies>
 
   <build>
