--- a/Desktop/Spring_pvz/hello-world-calc/pom.xml
+++ b/Desktop/Spring_pvz/hello-world-calc/pom.xml
@@ -104,6 +104,19 @@
 				</configuration>
 
 			</plugin>
+<plugin>
+	<groupId>org.apache.maven.plugins</groupId>
+	<artifactId>maven-failsafe-plugin</artifactId>
+	<executions>
+		<execution>
+		<phase>verify</phase>
+		<goals>
+			<goal>integration-test</goal>
+			<goal>verify</goal>
+		</goals>
+		</execution>
+	</executions>
+</plugin>
 		</plugins>
 	</build>
 
