--- a/Desktop/Spring_pvz/hello-world-calc/pom.xml
+++ b/Desktop/Spring_pvz/hello-world-calc/pom.xml
@@ -81,6 +81,12 @@
 			<artifactId>log4jdbc-spring-boot-starter</artifactId>
 			<version>1.0.2</version>
 		</dependency>
+		
+		<dependency>
+	<groupId>io.springfox</groupId>
+	<artifactId>springfox-boot-starter</artifactId>
+	<version>3.0.0</version>
+	</dependency>
 
 		<dependency>
 			<groupId>org.junit.vintage</groupId>
@@ -93,6 +99,11 @@
 			</exclusion>
 			</exclusions>
 			</dependency>
+			
+			<dependency>
+<groupId>org.springframework.boot</groupId>
+<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
