--- a/Desktop/Spring_pvz/hello-world-calc/pom.xml
+++ b/Desktop/Spring_pvz/hello-world-calc/pom.xml
@@ -87,6 +87,10 @@
 	<artifactId>springfox-boot-starter</artifactId>
 	<version>3.0.0</version>
 	</dependency>
+	<dependency>
+<groupId>org.springframework.boot</groupId>
+<artifactId>spring-boot-starter-data-jpa</artifactId>
+	</dependency>
 
 		<dependency>
 			<groupId>org.junit.vintage</groupId>
@@ -99,7 +103,6 @@
 			</exclusion>
 			</exclusions>
 			</dependency>
-			
 			<dependency>
 <groupId>org.springframework.boot</groupId>
 <artifactId>spring-boot-starter-validation</artifactId>
